resources/docker/kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
  - name: "33061"
    port: 33061
    targetPort: 3306
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
